2003-07-29  Federico Mena Quintero  <federico@ximian.com>

	Released 2.2.3.

	* configure.in: Bumped version number to 2.2.3.

2003-07-24  Federico Mena Quintero  <federico@ximian.com>

	Backports from HEAD; lose focusability in toolbars.

	* bonobo/bonobo-dock-item-grip.c
	(bonobo_dock_item_grip_instance_init): Don't set GTK_CAN_FOCUS.

	* bonobo/bonobo-ui-toolbar-button-item.c
	(bonobo_ui_toolbar_button_item_construct): Unset GTK_CAN_FOCUS.

	* bonobo/bonobo-dock-item.c (bonobo_dock_item_class_init): Removed
	the hackish focusing stuff.  Leave the handlers there, though,
	because they are used in the ui-toolbar compatibility code.

	* bonobo/bonobo-ui-toolbar-item.c
	(bonobo_ui_toolbar_item_class_init): Likewise.

	* bonobo/bonobo-dock.c (bonobo_dock_focus_roll): Removed.

	* bonobo/bonobo-dock.h: Likewise.

	* bonobo/bonobo-window.c (BonoboWindowPrivate): Removed the
	allow_all_focus field.
	(bonobo_window_key_press_event): Don't do evil focus_roll stuff.
	(bonobo_window_key_release_event): Likewise.
	(bonobo_window_focus): Likewise.

2003-07-23  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-socket.c (bonobo_socket_instance_init): Create a
	private structure for the socket.
	(bonobo_socket_finalize): Free the private structure.
	(toplevel_set_focus_cb): New callback for GtkWindow::set_focus().
	We use this to keep track of the focused widget and
	activate/deactivate the control frame as appropriate --- our
	focus_in/out handlers will not be called if the embedded plug is
	in-process.
	(bonobo_socket_hierarchy_changed): New handler for
	GtkWidget::hierarchy_changed().  We must monitor the focused
	widget on our toplevel, so we pick up toplevel changes here.

2003-06-29  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS

2003-05-19  Michael Meeks  <michael@ximian.com>

	* Version 2.2.2

2003-05-08  Anders Carlsson  <andersca@codefactory.se>

	* bonobo/bonobo-ui-preferences.c: Add a NULL entry last